--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,40 @@ code {
 .headerWrapper, .adminWrapper {
   margin-left: 10px;
 }
+
+.adminLabel {
+  display: inline-block;
+  width: 100px;
+  text-align: right;
+}
+
+.passwordLabel {
+  width: 60px;
+  margin-right: 15px;
+}
+
+.adminControl {
+  width: 250px;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.adminButton {
+  margin-top: 10px;
+  margin-left: 212px;
+  width: 150px;
+  cursor: pointer;
+  height: 25px;
+}
+
+.adminContainer {
+  margin-left: 20px;
+}
+
+#admin-all-supplements-list {
+  margin-top: 5px;
+}
+
+#admin-all-supplements-header {
+  margin-bottom: 5px;
+}
