--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,25 @@ code {
 #export-button {
   margin-bottom: 15px;
 }
+
+.footer-wrapper {
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  justify-content: center;
+}
+
+#medical-disclaimer {
+  margin-left: 7px;
+  font-size: 12px;
+}
+
+#medical-disclaimer-icon {
+  font-size: 25px;
+  color: #eed202;
+}
